apps/base/whisperx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisperx
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
