apps/base/whisperx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisperx-api
  namespace: whisperx
  labels:
    app: whisperx-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: whisperx-api
